More robust capturing <form>s that are taken out of the DOM.

Chrome's password manager tries to capture events where <form> elements
are taken out of the DOM or made invisible. This is used to detect
form submissions. This trigger failed in the past if a parent element
for the form was removed from the DOM or made invisible (as opposed
to the form it self). This CL makes the trigger logic more robust.

Bug: 760579, 710431
Change-Id: Idbc72d7ab57d9e6c61b0907ac5c9b3f96346d4a5
Reviewed-on: https://chromium-review.googlesource.com/892882
Commit-Queue: Dominic Battré <battre@chromium.org>
Reviewed-by: Jochen Eisinger <jochen@chromium.org>
Cr-Commit-Position: refs/heads/master@{#534037}
Former-commit-id: fadf05485d1a5703562fc7639f5b099875f7fe18