third_party/WebKit/Source/core/exported/WebFormElementObserverImpl.cpp
@@ -34,6 +34,7 @@ class WebFormElementObserverImpl::ObserverCallback
 
  private:
   Member<HTMLElement> element_;
+  HeapHashSet<Member<Node>> parents_;
   Member<MutationObserver> mutation_observer_;
   std::unique_ptr<WebFormElementObserverCallback> callback_;
 };
@@ -50,11 +51,15 @@ WebFormElementObserverImpl::ObserverCallback::ObserverCallback(
     init.setAttributeFilter({"action", "class", "style"});
     mutation_observer_->observe(element_, init, ASSERT_NO_EXCEPTION);
   }
-  if (element_->parentElement()) {
+  for (Node* node = element_; node->parentElement();
+       node = node->parentElement()) {
     MutationObserverInit init;
     init.setChildList(true);
-    mutation_observer_->observe(element_->parentElement(), init,
+    init.setAttributes(true);
+    init.setAttributeFilter({"class", "style"});
+    mutation_observer_->observe(node->parentElement(), init,
                                 ASSERT_NO_EXCEPTION);
+    parents_.insert(node->parentElement());
   }
 }
 
@@ -69,8 +74,11 @@ void WebFormElementObserverImpl::ObserverCallback::Deliver(
   for (const auto& record : records) {
     if (record->type() == "childList") {
       for (unsigned i = 0; i < record->removedNodes()->length(); ++i) {
-        if (record->removedNodes()->item(i) != element_)
+        Node* removed_node = record->removedNodes()->item(i);
+        if (removed_node != element_ &&
+            parents_.find(removed_node) == parents_.end()) {
           continue;
+        }
         callback_->ElementWasHiddenOrRemoved();
         Disconnect();
         return;
@@ -100,11 +108,14 @@ void WebFormElementObserverImpl::ObserverCallback::Deliver(
 void WebFormElementObserverImpl::ObserverCallback::Disconnect() {
   mutation_observer_->disconnect();
   callback_.reset();
+  parents_.clear();
+  element_.Clear();
 }
 
 void WebFormElementObserverImpl::ObserverCallback::Trace(
     blink::Visitor* visitor) {
   visitor->Trace(element_);
+  visitor->Trace(parents_);
   visitor->Trace(mutation_observer_);
   MutationObserver::Delegate::Trace(visitor);
 }
